--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,18 @@
 # https://docs.gradle.org/current/userguide/platforms.html#sub::toml-dependencies-format
 
 [versions]
-extra-java-module-info = "1.6"
-ch-fuzzle-gradle-semver = "1.0.0"
-kotlin-gradle-plugin = "1.9.20"
-junit-jupiter-engine = "5.10.0"
+kotlin-version = "1.9.23"
+junit-jupiter-engine-version = "5.10.2"
+junit-platform-launcher-version = "1.10.2"
+extra-java-module-info-version = "1.8"
+ch-fuzzle-gradle-semver-version = "1.0.0"
 
 [plugins]
-extra-java-module-info = { id = "org.gradlex.extra-java-module-info", version.ref = "extra-java-module-info" }
-ch-fuzzle-gradle-semver = { id = "ch.fuzzle.gradle.semver", version.ref = "ch-fuzzle-gradle-semver" }
+extra-java-module-info = { id = "org.gradlex.extra-java-module-info", version.ref = "extra-java-module-info-version" }
+ch-fuzzle-gradle-semver = { id = "ch.fuzzle.gradle.semver", version.ref = "ch-fuzzle-gradle-semver-version" }
 
 [libraries]
-kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin-gradle-plugin" }
-junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit-jupiter-engine" }
+kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin-version" }
+kotlin-test-junit5 = { module = "org.jetbrains.kotlin:kotlin-test-junit5", version.ref = "kotlin-version" }
+junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit-jupiter-engine-version" }
+junit-platform-launcher = { module = "org.junit.platform:junit-platform-launcher", version.ref = "junit-platform-launcher-version" }
